# Cambridge_AI_Professor

./: .gitignore  check_website_status.py  download_past_papers.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
resource_bank/: README.md
specs/001-core-database/: data-model.md  plan.md  spec.md  tasks.md
specs/001-core-database/checklists/: requirements.md
specs/002-dynamic-resource-manager/: data-model.md  plan.md  spec.md  tasks.md
specs/002-dynamic-resource-manager/checklists/: requirements.md
specs/003-content-generation-engine/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-content-generation-engine/checklists/: requirements.md
specs/004-a-star-workflow-orchestrator/: data-model.md  plan.md  spec.md  tasks.md
specs/005-student-cli/: data-model.md  plan.md  spec.md  tasks.md
src/: alembic.ini
src/a_star_workflow_orchestrator/: main.py  orchestrator.py
src/alembic/: env.py
src/cli/: README.md  main.py
src/content_generation_engine/: exam_generator.py  learning_pack_generator.py  main.py  pdf_qa_extractor.py
src/core_database/: crud.py  database.py  models.py
src/dynamic_resource_manager/: local_scanner.py  main.py  metadata_extractor.py  web_scraper.py
tests/: test_cli.py  test_core_database.py  test_exam_generator.py  test_learning_pack_generator.py  test_local_scanner.py  test_orchestrator.py  test_pdf_qa_extractor.py  test_web_scraper.py
webapp/: README.md  start_backend.sh  start_frontend.sh  test_backend.sh
webapp/frontend/: package-lock.json  package.json
(+14 files in other folders)
