[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambridge_ai_professor"
version = "0.0.1"
authors = [
  { name="Shehzad Anjum", email="sanjum77@gmail.com" },
]
description = "An A-Level Learning System powered by AI."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.17.2",
    "beautifulsoup4==4.14.3",
    "pdfminer.six==20251107",
    "pdfplumber==0.11.8",
    "pytest==9.0.1",
    "requests==2.32.5",
    "SQLAlchemy==2.0.44",
]

[project.scripts]
cambridge-ai-professor = "src.cli.main:main"
